# dockerfoo

./: .dockerignore  .gitignore  Makefile  README.md  common.yml  docker-compose.yml  pyproject.toml
compose/: common.yml  dev.yml  integration_tests.yml  prod.yml
docker/cli/: Dockerfile
docker/db-ops/: Dockerfile
integration_tests/: cli.py  test_main.py
src/dockerfoo/: db.py
src/dockerfoo/cli/: init.py  main.py  seed.py
src/dockerfoo/sql/: models.py
src/dockerfoo/util/: timing.py  urls.py
tests/util/: test_urls.py
